infrastructure/configs/staging/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: traefik
    metallb.io/ip-allocated-from-pool: default-ip-pool
spec:
  type: LoadBalancer
  loadBalancerIP: 172.19.0.80
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
      nodePort: 30990
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: websecure
      nodePort: 30336
    - name: websecure-http3
      protocol: UDP
      port: 443
      targetPort: websecure-http3
      nodePort: 30336
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
